bug -- extra space on highlight

--- a/salvus/page/worksheet1.css
+++ b/salvus/page/worksheet1.css
@@ -39,7 +39,7 @@ pre {
 }
 
 .salvus-running {
-    width:4ex;
+    width:20ex;
     padding-left:5px;    
     color:#448;
     text-decoration:blink;
